Fix overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@ a {
     transform: none !important;
 }
 
+.row {
+    width: 100% !important;
+}
+
 @media (max-width: 769px) {
     h2 {
         font-size: 20px !important;
